// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleCard Tokens Matches snapshot for Horizontal 1`] = `
<a
  className="rounded-bl-0px rounded-br-0px rounded-tl-0px items-center w-full flex"
  href="#"
>
  <div>
    <div
      data-no-hydrate={true}
      id="f64e1b3016f7c8d0d277ce020d98ee0d"
      style={
        Object {
          "display": "contents",
        }
      }
    >
      <img
        alt=""
        className="rounded-bl-0px rounded-br-0px rounded-tl-0px w-full"
        src="test-file-stub"
        title=""
      />
    </div>
  </div>
  <div>
    <h3
      className="text-kenvue-neutrals-black text-24.19px lg:text-27.65px leading-5 font-normal font-2 my-8px md:my-16px"
    >
      <span
        data-no-hydrate={true}
        id="6e5e36380662b0a36aed30babe228408"
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Article Title",
            }
          }
        />
      </span>
    </h3>
    <div
      className="mt-20px md:mt-24px"
    >
      <a
        className="focus:drop-shadow-button focus:outline-none active:drop-shadow-none rounded-8px group justify-center"
        href="#"
        role="button"
      >
        <span
          data-no-hydrate={true}
          id="123b58b4a9e4407d42b2606d912b6deb"
          style={
            Object {
              "display": "contents",
            }
          }
        >
          <span
            className="active:text-kenvue-green-shade-60 focus:text-kenvue-green-shade-80 hover:text-kenvue-green-shade-80 text-kenvue-green-green text-14px lg:text-16px leading-6 font-bold font-2"
            dangerouslySetInnerHTML={
              Object {
                "__html": "READ MORE",
              }
            }
          />
        </span>
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for Vertical 1`] = `
<a
  className="rounded-bl-0px rounded-br-0px rounded-tl-0px w-full flex flex-col"
  href="#"
>
  <div>
    <div
      data-no-hydrate={true}
      id="f64e1b3016f7c8d0d277ce020d98ee0d"
      style={
        Object {
          "display": "contents",
        }
      }
    >
      <img
        alt=""
        className="rounded-bl-0px rounded-br-0px rounded-tl-0px"
        src="test-file-stub"
        title=""
      />
    </div>
  </div>
  <div>
    <h3
      className="text-kenvue-neutrals-black text-24.19px lg:text-27.65px leading-5 font-normal font-2 my-8px md:my-16px"
    >
      <span
        data-no-hydrate={true}
        id="6e5e36380662b0a36aed30babe228408"
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Article Title",
            }
          }
        />
      </span>
    </h3>
    <div
      className="mt-20px md:mt-24px"
    >
      <a
        className="focus:drop-shadow-button focus:outline-none active:drop-shadow-none rounded-8px group justify-center"
        href="#"
        role="button"
      >
        <span
          data-no-hydrate={true}
          id="123b58b4a9e4407d42b2606d912b6deb"
          style={
            Object {
              "display": "contents",
            }
          }
        >
          <span
            className="active:text-kenvue-green-shade-60 focus:text-kenvue-green-shade-80 hover:text-kenvue-green-shade-80 text-kenvue-green-green text-14px lg:text-16px leading-6 font-bold font-2"
            dangerouslySetInnerHTML={
              Object {
                "__html": "READ MORE",
              }
            }
          />
        </span>
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for WithBackground 1`] = `
<a
  className="bg-kenvue-neutrals-lightest-grey"
>
  <div>
    <img />
  </div>
  <div
    className="m-8px md:m-16px"
  >
    <h3 />
    <div>
      <a>
        <span />
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for WithDescription 1`] = `
<a>
  <div>
    <img />
  </div>
  <div>
    <h3 />
    <p>
      <span
        data-no-hydrate={true}
        id="63a9f0ea7bb98050796b649e85481845"
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description Text",
            }
          }
        />
      </span>
    </p>
    <div>
      <a>
        <span />
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for WithEyebrow 1`] = `
<a>
  <div>
    <img />
  </div>
  <div
    className="mt-16px md:mt-20px"
  >
    <div
      className="text-kenvue-neutrals-black text-11.67px lg:text-13.33px leading-6 font-bold font-2 uppercase"
    >
      <span
        data-no-hydrate={true}
        id="63a9f0ea7bb98050796b649e85481845"
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Eyebrow",
            }
          }
        />
      </span>
    </div>
    <h3 />
    <div>
      <a>
        <span />
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for WithH2Title 1`] = `
<a>
  <div>
    <img />
  </div>
  <div>
    <h2
      className="text-29.03px lg:text-33.18px leading-5 font-normal font-2"
    />
    <div>
      <a>
        <span />
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for WithHorizontalLeftOrientation 1`] = `
<a>
  <div>
    <img />
  </div>
  <div
    className="ml-20px md:ml-24px"
  >
    <h3 />
    <div>
      <a>
        <span />
      </a>
    </div>
  </div>
</a>
`;

exports[`ArticleCard Tokens Matches snapshot for WithHorizontalRightOrientation 1`] = `
<a
  className="flex-row-reverse"
>
  <div>
    <img />
  </div>
  <div
    className="mr-20px md:mr-24px"
  >
    <h3 />
    <div>
      <a>
        <span />
      </a>
    </div>
  </div>
</a>
`;
